@startuml

title __COMMON's Class Diagram__\n

  namespace  {
    namespace om.groupjn.orderservice {
      namespace common {
        class com.groupjn.orderservice.common.Payment {
            - amount : double
            - orderId : int
            - paymentId : int
            - paymentStatus : String
            - transactionId : String
            + Payment()
            + Payment()
            + equals()
            + getAmount()
            + getOrderId()
            + getPaymentId()
            + getPaymentStatus()
            + getTransactionId()
            + hashCode()
            + setAmount()
            + setOrderId()
            + setPaymentId()
            + setPaymentStatus()
            + setTransactionId()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.orderservice {
      namespace common {
        class com.groupjn.orderservice.common.TransactionRequest {
            + TransactionRequest()
            + TransactionRequest()
            + equals()
            + getOrder()
            + getPayment()
            + hashCode()
            + setOrder()
            + setPayment()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace  {
    namespace om.groupjn.orderservice {
      namespace common {
        class com.groupjn.orderservice.common.TransactionResponse {
            - amount : double
            - message : String
            - transactionId : String
            + TransactionResponse()
            + TransactionResponse()
            + equals()
            + getAmount()
            + getMessage()
            + getOrder()
            + getTransactionId()
            + hashCode()
            + setAmount()
            + setMessage()
            + setOrder()
            + setTransactionId()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  com.groupjn.orderservice.common.TransactionRequest o-- com.groupjn.orderservice.entity.Order : order
  com.groupjn.orderservice.common.TransactionRequest o-- com.groupjn.orderservice.common.Payment : payment
  com.groupjn.orderservice.common.TransactionResponse o-- com.groupjn.orderservice.entity.Order : order


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
